# cinepyle

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  sync-theaters.yml
data/seed/: theaters.db
scripts/: sync_theaters.py
seed/: theaters.db
src/cinepyle/: config.py  main.py  navigation.py
src/cinepyle/booking/: base.py  cgv.py  cineq.py  lotte.py  megabox.py
src/cinepyle/bot/: booking.py  booking_legacy.py  handlers.py  nlp.py  theater_prefs.py
src/cinepyle/browser/: __init__.py  booking_history.py  captcha.py  manager.py  seat_map.py  watcha_boxoffice.py
src/cinepyle/dashboard/: __init__.py  app.py  settings_manager.py  settings_store.py
src/cinepyle/dashboard/templates/: base.html  index.html  settings.html
src/cinepyle/dashboard/templates/partials/: credentials_status.html  error.html  imax_theaters_status.html  intervals_status.html  llm_status.html  monitor_search_results.html  monitor_status.html  preferred_theaters_status.html  theater_search_results.html  theater_status.html
src/cinepyle/digest/: __init__.py  formatter.py  job.py  llm.py  scrapers.py  settings.py
src/cinepyle/healing/: engine.py  html_trimmer.py  llm.py  store.py  strategy.py
src/cinepyle/nlp/: __init__.py  agent.py  prompts.py  state.py  tools.py
src/cinepyle/notifications/: daily_digest.py  imax.py  new_movie.py  screen_alert.py  screen_monitor.py  screen_settings.py  store.py  theater_sync.py
src/cinepyle/scrapers/: boxoffice.py  browser.py  cgv.py  kofic.py  screens.py  watcha.py
src/cinepyle/theaters/: cgv.py  cineq.py  data_cgv.py  data_cineq.py  data_indie.py  finder.py  lotte.py  megabox.py  models.py  schedule.py  seed_theaters.json  sync.py  sync_job.py  sync_settings.py
